Add New Features

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Animated Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="main">
         <div id="page1">
@@ -17,8 +19,25 @@
                     <h4><a href="#contact">Contact</a></h4>
                 </div>
             </nav>
+            <div id="center">
+                <div id="left">
+                    <h3>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and
+                        environments.</h3>
+                </div>
+                <div id="right">
+                    <h1>SPACES<br>THAT<br>INSPIRE</h1>
+                </div>
+            </div>
+            <div id="hero-shape">
+                <div id="hero-1"></div>
+                <div id="hero-2"></div>
+                <div id="hero-3"></div>
+            </div>
+            <video src="page1-Video.mp4" muted autoplay loop></video>
+
         </div>
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
